--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
-title: 💻📚🧮🎮🎶
-description: Dakota M. Hollmann's CV
+title: Dakota M. Hollmann | Lead Data Engineer & Architect
+description: Architecting petabyte-scale pipelines and optimizing cloud costs.
